# agri-test

./: .coverage  .env  .gitignore  README.md  TESTING.md  coverage.xml  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-test.txt  run_tests.sh
.dvc/: config
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
api/: Dockerfile  api_orchestrator.py  main.py  requirements.txt  test_rag_integration.py
deployment/: Dockerfile.api  Dockerfile.frontend
docs/: APPLICATION_DESIGN.md  DATA_VERSIONING.md  MODEL_TRAINING_SUMMARY.md
frontend/: .dockerignore  Dockerfile  next.config.js
frontend/.next/: trace
frontend/.next/cache/: config.json
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/client-development-fallback/: index.pack.gz.old
frontend/.next/server/pages/: index.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/pages/: _app.js
frontend/.next/static/webpack/: webpack.8423bd5439d4d7bc.hot-update.js  webpack.96425aa3de1076d8.hot-update.js
frontend/components/: rag_client.tsx
frontend/pages/: index - Nov 23-138.tsx  index - Nov23-10-13.tsx  index - Nov23-13.tsx  index - Nov23-9.tsx  index.tsx  index.tsx.bak  index.tsx.old  index_fix.txt  next.config.js
ml-models/yield_forecast/: Dockerfile.yield
ml_models/mcsi/: Dockerfile  requirements.txt
ml_models/yield_forecast/: Dockerfile  requirements.txt
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  requirements.txt
pulumi/gcp/: __init__.py  gke_cluster.py
pulumi/kubernetes/: __init__.py  config.py  deployments.py  ingress.py  services.py
rag/: .env.local  Dockerfile  Dockerfile.rag  chromadb_diagnostic.py  docker-compose.yml  rag_cli.py  rag_service.py  rag_service_simple.py  requirements.txt  seed.py  seed_rag_knowledge_base.py
scripts/: build-and-push.sh
tests/: conftest.py  test_api.py  test_api_integration.py  test_api_orchestrator.py  test_data_processing.py  test_integration.py  test_mcsi.py  test_mcsi_integration.py  test_rag_integration.py  test_rag_service.py  test_yield_integration.py  test_yield_model.py
(+1 files in other folders)
