[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agriguard"
version = "1.0.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["api", "rag"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "rag/chromadb_diagnostic.py",
    "rag/rag_cli.py",
    "rag/rag_service_simple.py",
    "rag/seed.py",
    "rag/seed_rag_knowledge_base.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
